# openenv-multiagent

./: .env  .env.example  .gitignore  API_QUICK_REFERENCE.md  BACKEND_RESTRUCTURE_COMPLETE.md  COMPLETE_API_GUIDE.md  HACKATHON_ACTION_PLAN.md  IMPLEMENTATION_COMPLETE.md  LLAMA2_ARCHITECTURE.md  LLAMA2_COMPLETE_GUIDE.md  LLAMA2_IMPLEMENTATION_SUMMARY.md  LLAMA2_QUICKSTART.md  LLAMA2_README.md  LLAMA2_SETUP_CHECKLIST.md  LLAMA2_WORKER_INTEGRATION_GUIDE.md  MONGODB_FASTAPI_COMPLETE.md  OPENENV_IMPLEMENTATION.md  ORCHESTRAAI_API_DOCS.md  ORCHESTRAAI_STARTUP_BRIEF.md  PROJECT_STATUS.md  README.md  SERVER_STARTUP_FIXED.md  SETUP.md  WORKER_GUIDE.md  app.py  requirements.md  requirements.txt  sig.txt  tasks.md  test_environment.py
.kiro/specs/manager-worker-rl-env/: .config.kiro  design.md
env/: __init__.py  hallucination_engine.py  manager_worker_env.py  reward_calculator.py
manager-worker-env/: .coverage  MIGRATION_GUIDE.md  PHASE2_COMPLETE.md  PHASE2_SUMMARY.md  STATUS.md  colab_notebook.ipynb  compare_models.py  example_hierarchical_multiagent.py  example_real_multiagent.py  example_usage.py  openenv.yaml  pyproject.toml  test_environment.py  test_hf_workers.py  test_llm_workers.py  test_phase2.py
manager-worker-env/BE/: .env  .env.example  PHASE3_STRUCTURE.md  README.md  __init__.py  config.py  database.py  episode_manager.py  errors.py  main.py  metrics_tracker.py  models.py  websocket_manager.py
manager-worker-env/agents/: __init__.py  llm_worker.py  manager_agent.py  meta_manager.py  worker_pool.py
manager-worker-env/config/: llm_config.yaml
manager-worker-env/env/: __init__.py  cli.py  manager_worker_env.py
manager-worker-env/manager_worker_env.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
manager-worker-env/orchestra-backend/: README.md  __init__.py  config.py  main.py
manager-worker-env/orchestra-backend/api/middleware/: auth.py  rate_limit.py
manager-worker-env/orchestra-backend/api/routes/: episode.py  metrics.py  model.py  websocket.py
manager-worker-env/orchestra-backend/db/: mongodb.py
manager-worker-env/orchestra-backend/db/repositories/: metrics_repo.py
manager-worker-env/orchestra-backend/models/: common.py  episode.py  metrics.py
manager-worker-env/orchestra-backend/services/: episode_service.py  metrics_service.py
manager-worker-env/orchestra_backend/: README.md  main.py  requirements.txt
manager-worker-env/orchestra_backend/api/middleware/: auth.py
manager-worker-env/orchestra_backend/api/routes/: episode.py  metrics.py
manager-worker-env/orchestra_backend/db/: mongodb.py
manager-worker-env/orchestra_backend/db/repositories/: __init__.py  episode_repo.py
manager-worker-env/orchestra_backend/services/: budget_service.py  episode_service.py  metrics_service.py  quality_service.py
manager-worker-env/server/: __init__.py  app.py
manager-worker-env/src/manager_worker_env/: __init__.py  models.py
manager-worker-env/src/manager_worker_env/utils/: __init__.py  task_library.py
manager-worker-env/tests/: test_smoke.py
manager-worker-env/training/: __init__.py  generate_multitask_data.py  huggingface_integration.py  inference.py  logging_setup.py  multitask_worker_data.jsonl  run_training.py  train_manager.py  train_worker_sft.py  worker_data.jsonl  worker_finetune_colab.ipynb
models/test_fast_worker/: README.md  adapter_config.json  adapter_model.safetensors  tokenizer_config.json
